Fixes styling error in mixins on Firefox.

--- a/app/assets/stylesheets/partials/_mixins.css.scss
+++ b/app/assets/stylesheets/partials/_mixins.css.scss
@@ -30,7 +30,7 @@
 }
 
 @mixin box-sizing($sizing) {
-    -moz-box-shadow: $sizing;
+    -moz-box-sizing: $sizing;
     -webkit-box-sizing: $sizing;
     box-sizing: $sizing;
 }
